--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
             </section>
 
             <section id="benefits" class="promo-section" aria-labelledby="benefits-title">
-                <h2 id="benefits-title">Преимущества RFM-анализа</h2>
-                <div class="promo-grid">
+                <div class="container">
+                    <h2 id="benefits-title">Преимущества RFM-анализа</h2>
+                    <div class="promo-grid">
                     <article class="promo-card">
                         <div class="promo-icon" aria-hidden="true">🎯</div>
                         <h3>Точное сегментирование</h3>
@@ -150,6 +151,7 @@
                         <h3>Данные для решений</h3>
                         <p>Принимайте решения на основе реальных данных о поведении ваших клиентов</p>
                     </article>
+                    </div>
                 </div>
             </section>
 
@@ -175,8 +177,9 @@
             </section>
 
             <section id="use-cases" class="use-cases" aria-labelledby="use-cases-title">
-                <h2 id="use-cases-title">Где применяется RFM-анализ?</h2>
-                <div class="use-cases-grid">
+                <div class="container">
+                    <h2 id="use-cases-title">Где применяется RFM-анализ?</h2>
+                    <div class="use-cases-grid">
                     <article class="use-case-card">
                         <div class="use-case-icon">🛍️</div>
                         <h3>Розничная торговля</h3>
@@ -217,6 +220,7 @@
                             <li>Стратегическое планирование</li>
                         </ul>
                     </article>
+                    </div>
                 </div>
             </section>
 
