download section changes

--- a/index.html
+++ b/index.html
@@ -116,17 +116,15 @@
                         <span class="file-type-tag">CSV</span>
                         <span class="file-type-tag">До 10 МБ</span>
                     </div>
+                    <div>
+                        <button id="analyze-button" class="button">Запустить анализ</button>
+                        <div id="results-container" class="results-grid"></div>
+                    </div>
+                    
                 </div>
             </section>
 
             <!-- Секция анализа -->
-            <section id="analysis-section" class="section">
-                <div class="container">
-                    <h2>RFM Анализ</h2>
-                    <button id="analyze-button" class="button">Запустить анализ</button>
-                    <div id="results-container" class="results-grid"></div>
-                </div>
-            </section>
 
             <section id="benefits" class="promo-section" aria-labelledby="benefits-title">
                 <div class="container">
